tests/should_fail/terminates/complicated_traits_recursion.stderr
error: Mutually recursive functions: when calling `<i32 as Foo>::foo`...
  --> complicated_traits_recursion.rs:12:5
   |
12 |     fn foo() {
   |     ^^^^^^^^
   |
note: then `<i32 as Foo>::foo` uses the impl `<i32 as Foo>` via the call to `bar`...
  --> complicated_traits_recursion.rs:13:9
   |
13 |         bar::<std::iter::Once<i32>>(std::iter::once(1i32));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: finally the method `<i32 as Foo>::foo` might be called
  --> complicated_traits_recursion.rs:12:5
   |
12 |     fn foo() {
   |     ^^^^^^^^

error: aborting due to 1 previous error

